--- a/SpeedySerializer/packages.config
+++ b/SpeedySerializer/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net452" />
+  <package id="Jil" version="2.14.5" targetFramework="net452" />
   <package id="Lz4.Net" version="1.0.98" targetFramework="net452" />
   <package id="ManagedXZ" version="1.0.0" targetFramework="net452" />
   <package id="MetroHash" version="0.1.0" targetFramework="net452" />
   <package id="NetJSON" version="1.2.1.5" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Sigil" version="4.6.1" targetFramework="net452" />
   <package id="Snappy.NET" version="1.1.1.8" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net452" />
