--- a/SpeedySerializer/SpeedySerializer.csproj
+++ b/SpeedySerializer/SpeedySerializer.csproj
@@ -60,8 +60,8 @@
       <HintPath>..\..\SecureNotes\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Sigil, Version=4.6.1.0, Culture=neutral, PublicKeyToken=2d06c3494341c8ab, processorArchitecture=MSIL">
-      <HintPath>..\..\SecureNotes\packages\Sigil.4.6.1\lib\net45\Sigil.dll</HintPath>
+    <Reference Include="Sigil, Version=4.7.0.0, Culture=neutral, PublicKeyToken=2d06c3494341c8ab, processorArchitecture=MSIL">
+      <HintPath>..\..\SecureNotes\packages\Sigil.4.7.0\lib\net45\Sigil.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Snappy.NET, Version=1.1.1.8, Culture=neutral, processorArchitecture=MSIL">
@@ -86,10 +86,12 @@
     <Compile Include="Lz4Object.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="PrivateSetterResolver.cs" />
+    <Compile Include="SerializationOptions.cs" />
     <Compile Include="SpeedySerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
